--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 </head>
 <body>
     <div id="app">
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="my-5 text-center">
+                        <h1>
+                            {{ text }} 
+                        </h1>
+                        <h6>metodo baffo</h6>
+                    </div>
+                    <div class="my-5 text-center">
+                        <h1 v-text="text"></h1>
+                        <h6>metodo con v-text</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
