--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                         <h6>metodo con v-text</h6>
                     </div>
                 </div>
+                <div class="col-12">
+                    <div>
+                        <img :src="image" class="w-50">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
